fixed and styledc collapse mobile nav

--- a/src/core/scss/_header_strip.scss
+++ b/src/core/scss/_header_strip.scss
@@ -5,6 +5,7 @@
             top:150px;
             background: rgba(255, 255, 255, 0.8);
             left: 50%;
+            z-index: 0;
     }
     @include media-breakpoint-between(sm, lg){
             margin-left: -350px;
