--- a/src/core/scss/_navigation.scss
+++ b/src/core/scss/_navigation.scss
@@ -17,20 +17,36 @@
         border: none;
         width: 35px;
         height: inherit;
-        button{
           height: 100%;
-        }
+          padding: 0;
+          display: flex;
+
         span{
           margin-top: 45%;
+          flex-grow: 1;
           &::before{
           content: '\f0c9'; 
           font-family: "Font Awesome 5 Free";
           font-weight: 900;
           color: #000;
-          width: inherit;
         }
       }
       }
+    }
+    .navbar-collapse{
+      position: relative;
+      width: calc(100vw - 1rem - 1px);
+      margin-top: 33px;
+      margin-left: -1rem;
+      z-index: 2;
+      ul{
+        width: 100%;
+      .nav-item{
+        border-top: #fff solid 1px;
+        width: 100%;
+      padding: 15px 20px;
+      }
+    }
     }
   }
 }
